[tool.poetry]
name = "gpt-scraper"
version = "0.1.0"
description = "chatgpt scraper"
authors = ["TFSID"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.23.1"
undetected-chromedriver = "^3.5.5"
fake-useragent = "^1.5.1"
webdriver-manager = "^4.0.2"
disutils = "^1.4.32.post2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
